--- a/assets/sass/Layout/_footer.scss
+++ b/assets/sass/Layout/_footer.scss
@@ -5,7 +5,7 @@
     font-size: 1rem;
     overflow: hidden;
     padding: 0 5rem;
-    color: $color-text;
+    color: $color-white;    
     background-color: $color-black;
 
     &__logo-box {
@@ -53,7 +53,7 @@
 
         &:link,
         &:visited {
-            color: $color-text;
+            color: $color-white;
             text-transform: uppercase;
             text-decoration: none;
             display: inline-block;
