--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,18 +1,18 @@
-@import './Abstracts/variables';
-@import './Abstracts/mixin';
-@import './Base/base';
-@import './Base/typography';
-@import './Layout/header';
-@import './Base/utilities';
-@import './Layout/footer';
-@import './Pages/home';
-@import './Abstracts/animation';
+@import "./Abstracts/variables";
+@import "./Abstracts/mixin";
+@import "./Base/base";
+@import "./Base/typography";
+@import "./Layout/header";
+@import "./Base/utilities";
+@import "./Layout/footer";
+@import "./Pages/home";
+@import "./Abstracts/animation";
 
-@import './Components/button';
-@import './Components/about';
-@import './Components/social';
-@import './Components/feature';
-@import './Components/navigation';
-@import './Components/toast';
-@import './Components/form';
-@import './Components/contact';
+@import "./Components/button";
+@import "./Components/about";
+@import "./Components/social";
+@import "./Components/feature";
+@import "./Components/navigation";
+@import "./Components/toast";
+@import "./Components/form";
+@import "./Components/contact";
