--- a/assets/sass/Base/_typography.scss
+++ b/assets/sass/Base/_typography.scss
@@ -1,66 +1,74 @@
 body {
-    font-family: "Lato", sans-serif;
-    color: $color-text;
-    font-weight: 500;
-    line-height: 1.5;
+  font-family: "Lato", sans-serif;
+  color: $color-text;
+  font-weight: 500;
+  line-height: 1.5;
 }
 
 .heading-primary {
-    color: $color-white;
-    margin-bottom: 2rem;
-    font-family: 'Quicksand';
-    src: local('Quicksand Light'), local('Quicksand-Light'), url(https://fonts.gstatic.com/s/quicksand/v8/6xKodSZaM9iE8KbpRA_pgHYYT8L_.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  color: $color-white;
+  margin-bottom: 2rem;
+  font-family: "Quicksand";
+  src: local("Quicksand Light"), local("Quicksand-Light"),
+    url(https://fonts.gstatic.com/s/quicksand/v8/6xKodSZaM9iE8KbpRA_pgHYYT8L_.woff2)
+      format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
 
-    &--main {
-        display: block;
-        font-size: 4rem;
-        font-weight: 400;
-        letter-spacing: 0.1rem;
-        line-height: 5rem;
-    }
+  &--main {
+    display: block;
+    font-size: 4rem;
+    font-weight: 400;
+    letter-spacing: 0.1rem;
+    line-height: 5rem;
+  }
 
-    &--sub {
-        display: block;
-        font-size: 1.5rem;
-        font-weight: 400;
-        line-height: 2.4rem;
-    }
+  &--sub {
+    display: block;
+    font-size: 1.5rem;
+    font-weight: 400;
+    line-height: 2.4rem;
+  }
 
-    &--color {
-        color: $color-black;
-    }
+  &--color {
+    color: $color-black;
+  }
 }
 
 .heading-secondary {
-    font-size: 1.3rem;
-    text-transform: uppercase;
-    font-weight: 900;
-    display: inline-block;
-    letter-spacing: 0.2rem;
-    cursor: pointer;
-    background-image: linear-gradient(to right, $color-primary-dark, $color-black);
-    color: transparent;
-    -webkit-background-clip: text;
-    transition: all 0.2s;
+  font-size: 1.3rem;
+  text-transform: uppercase;
+  font-weight: 900;
+  display: inline-block;
+  letter-spacing: 0.2rem;
+  cursor: pointer;
+  background-image: linear-gradient(
+    to right,
+    $color-primary-dark,
+    $color-black
+  );
+  color: transparent;
+  -webkit-background-clip: text;
+  transition: all 0.2s;
 
-    &:hover {
-        transform: skewY(5deg) scale(1.3);
-        text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
-    }
+  &:hover {
+    transform: skewY(5deg) scale(1.3);
+    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+  }
 }
 
 .heading-summary {
-    font-size: 1rem;
-    font-weight: 700;
-    text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 .paragraph {
-    font-size: 1.3rem;
-    text-align: justify;
+  font-size: 1.3rem;
+  text-align: justify;
 
-    &:not(:last-child) {
-        margin: 2rem;
-    }
+  &:not(:last-child) {
+    margin: 2rem;
+  }
 }
