--- a/assets/sass/Components/_about.scss
+++ b/assets/sass/Components/_about.scss
@@ -1,60 +1,60 @@
 .content-ctn {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 .content-right {
-    position: relative;
-    flex-basis: 35%;
+  position: relative;
+  flex-basis: 35%;
 
-    @include respond (mobile) {
-        flex-basis: 0%;
-        display: none;
+  @include respond(mobile) {
+    flex-basis: 0%;
+    display: none;
+  }
+
+  @include respond(mini-mobile) {
+    flex-basis: 0%;
+    display: none;
+  }
+
+  &__photo {
+    width: 60%;
+    box-shadow: 0 1.5rem 2rem rgba($color: $color-black, $alpha: 0.5);
+    position: absolute;
+    z-index: 10;
+    outline-offset: 0.5rem;
+    transition: all 0.3s;
+
+    &--p1 {
+      left: 0%;
+      top: 0%;
     }
 
-    @include respond (mini-mobile) {
-        flex-basis: 0%;
-        display: none;
+    &--p2 {
+      left: 40%;
+      top: 15%;
     }
 
-    &__photo {
-        width: 60%;
-        box-shadow: 0 1.5rem 2rem rgba($color: $color-black, $alpha: .5);
-        position: absolute;
-        z-index: 10;
-        outline-offset: 0.5rem;
-        transition: all .3s;
-
-        &--p1 {
-            left: 0%;
-            top: 0%;
-        }
-
-        &--p2 {
-            left: 40%;
-            top: 15%;
-        }
-
-        &--p3 {
-            right: 35%;
-            top: 35%;
-        }
-
-        &:hover {
-            transform: scale(1.3);
-            z-index: 20;
-        }
+    &--p3 {
+      right: 35%;
+      top: 35%;
     }
+
+    &:hover {
+      transform: scale(1.3);
+      z-index: 20;
+    }
+  }
 }
 
 .content-left {
-    flex-basis: 55%;
+  flex-basis: 55%;
 
-    @include respond (mobile) {
-        flex-basis: 90%;
-    }
+  @include respond(mobile) {
+    flex-basis: 90%;
+  }
 
-    @include respond (mini-mobile) {
-        flex-basis: 90%;
-    }
+  @include respond(mini-mobile) {
+    flex-basis: 90%;
+  }
 }
