--- a/assets/sass/Components/_toast.scss
+++ b/assets/sass/Components/_toast.scss
@@ -1,88 +1,87 @@
 #toast {
-    position: fixed;
-    top: 38px;
-    right: 0;
-    z-index: 999999;
+  position: fixed;
+  top: 38px;
+  right: 0;
+  z-index: 999999;
 }
 
 .toast {
-    display: flex;
-    align-items: center;
-    background-color: $color-white;
-    border-radius: 2px;
-    padding: 1rem 0;
-    min-width: 17rem;
-    max-width: 32rem;
-    border-left: 4px solid;
-    box-shadow: 0 5px 8px rgba($color-primary-dark, 0.3);
-    transition: all linear 0.3s;
+  display: flex;
+  align-items: center;
+  background-color: $color-white;
+  border-radius: 2px;
+  padding: 1rem 0;
+  min-width: 17rem;
+  max-width: 32rem;
+  border-left: 4px solid;
+  box-shadow: 0 5px 8px rgba($color-primary-dark, 0.3);
+  transition: all linear 0.3s;
 
-    &--success {
-        border-color: $color-success;
-    }
+  &--success {
+    border-color: $color-success;
+  }
 
-    &--success &__icon {
-        color: $color-success;
-    }
+  &--success &__icon {
+    color: $color-success;
+  }
 
-    &--info {
-        border-color: $color-infor;
-    }
+  &--info {
+    border-color: $color-infor;
+  }
 
-    &--info &__icon {
-        color: $color-infor;
-    }
+  &--info &__icon {
+    color: $color-infor;
+  }
 
-    &--warning {
-        border-color: $color-warn;
-    }
+  &--warning {
+    border-color: $color-warn;
+  }
 
-    &--warning &__icon {
-        color: $color-warn;
-    }
+  &--warning &__icon {
+    color: $color-warn;
+  }
 
-    &--error {
-        border-color: $color-deny;
-    }
+  &--error {
+    border-color: $color-deny;
+  }
 
-    &--error &__icon {
-        color: $color-deny;
-    }
+  &--error &__icon {
+    color: $color-deny;
+  }
 
-    &+& {
-        margin-top: 1rem;
-    }
+  & + & {
+    margin-top: 1rem;
+  }
 
-    &__icon {
-        font-size: 1.5rem;
-    }
+  &__icon {
+    font-size: 1.5rem;
+  }
 
-    &__icon,
-    &__close {
-        padding: 0 1rem;
-    }
+  &__icon,
+  &__close {
+    padding: 0 1rem;
+  }
 
-    &__body {
-        flex-grow: 1;
-    }
+  &__body {
+    flex-grow: 1;
+  }
 
-    &__title {
-        font-size: 1.3rem;
-        font-weight: 600;
-        color: rgb(0, 0, 0);
-        ;
-    }
+  &__title {
+    font-size: 1.3rem;
+    font-weight: 600;
+    color: rgb(0, 0, 0);
+  }
 
-    &__msg {
-        font-size: 1rem;
-        color: $color-text;
-        margin-top: 3px;
-        line-height: 1.5;
-    }
+  &__msg {
+    font-size: 1rem;
+    color: $color-text;
+    margin-top: 3px;
+    line-height: 1.5;
+  }
 
-    &__close {
-        font-size: 1.5rem;
-        color: rgba($color-black, .3);
-        cursor: pointer;
-    }
+  &__close {
+    font-size: 1.5rem;
+    color: rgba($color-black, 0.3);
+    cursor: pointer;
+  }
 }
