--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -173,7 +173,7 @@ body {
 .heading-primary {
   color: white;
   margin-bottom: 2rem;
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   src: local("Quicksand Light"), local("Quicksand-Light"), url(https://fonts.gstatic.com/s/quicksand/v8/6xKodSZaM9iE8KbpRA_pgHYYT8L_.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
@@ -370,7 +370,7 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   display: inline-block;
-  transition: all .2s;
+  transition: all 0.2s;
 }
 
 .footer__link:hover {
@@ -582,7 +582,7 @@ body {
   border-radius: 50px;
   cursor: pointer;
   min-width: 100px;
-  transition: all .2s ease;
+  transition: all 0.2s ease;
   user-select: none;
   text-align: center;
   box-shadow: 0 5px 3px rgba(0, 0, 0, 0.2);
@@ -704,7 +704,7 @@ body {
   position: absolute;
   z-index: 10;
   outline-offset: 0.5rem;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .content-right__photo--p1 {
@@ -912,7 +912,7 @@ body {
 */
   text-align: justify;
   border-radius: 5rem;
-  transition: all .2s;
+  transition: all 0.2s;
   background-color: rgba(255, 255, 255, 0.8);
 }
 
@@ -1024,7 +1024,7 @@ body {
   height: 27rem;
   width: 100%;
   border-radius: 5rem;
-  transition: all .8s ease;
+  transition: all 0.8s ease;
   overflow: hidden;
   backface-visibility: hidden;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
