--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -9,10 +9,10 @@
 @import "./Abstracts/animation";
 
 @import "./Components/button";
-@import "./Components/about";
+@import "./Components/intro";
 @import "./Components/social";
 @import "./Components/feature";
-@import "./Components/navigation";
+@import "./Components/nav";
 @import "./Components/toast";
 @import "./Components/form";
 @import "./Components/contact";
