--- a/assets/sass/Components/_nav.scss
+++ b/assets/sass/Components/_nav.scss
@@ -1,68 +1,66 @@
-.nav {
-  display: flex;
+.navbar-ctn {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 99;
+
+  display: flex;
   min-height: 20px;
   width: 100%;
-  z-index: 99;
   justify-content: space-between;
+
   background-color: $color-black;
-  &-list {
-    margin: 0 1.5rem;
-  }
+}
 
-  &-list li {
-    position: relative;
-  }
+.navbar-menu {
+  margin: 0 1.5rem;
 
-  &-list > li {
+  & > li {
     display: inline-block;
+    position: relative;
+    cursor: pointer;
   }
 
-  &-list > li > a {
-    color: $color-gray-light;
-  }
-
-  &-list li a {
-    color: $color-white;
-    text-decoration: none;
-    line-height: 38px;
-    padding: 0 0.5rem;
+  & li a {
     display: block;
+    line-height: 40px;
+    padding: 0 0.5rem;
 
+    text-decoration: none;
+    color: $color-gray-light;
     @include respond(mobile) {
       padding: 0 0.5rem;
       line-height: 26px;
     }
-
     @include respond(mini-mobile) {
       padding: 0 0.2rem;
       line-height: 26px;
     }
   }
 
-  &-list li:hover a {
+  & li:hover a {
     color: $color-black;
     background-color: $color-white;
   }
 
-  &-list .subnav {
+  & .subnav {
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: $color-white;
-    list-style: none;
-    box-shadow: 0 0 10px rgba($color-black, 0.3);
+
     display: none;
+    box-shadow: 0 0 10px rgba($color-black, 0.3);
+
+    list-style: none;
+    background-color: $color-white;
   }
 
-  &-list li:hover .subnav {
+  & li:hover .subnav {
     display: block;
   }
 
-  &-list > li:hover > a,
-  &-list .subnav li:hover a {
+  & > li:hover > a,
+  & .subnav li:hover a {
     color: $color-black;
     background-color: $color-gray-light;
   }
