--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -165,17 +165,15 @@ body {
 
 body {
   font-family: "Lato", sans-serif;
-  color: #787878;
   font-weight: 500;
   line-height: 1.5;
+  color: #787878;
 }
 
 .heading-primary {
-  color: white;
-  margin-bottom: 2rem;
   font-family: "Quicksand";
-  src: local("Quicksand Light"), local("Quicksand-Light"), url(https://fonts.gstatic.com/s/quicksand/v8/6xKodSZaM9iE8KbpRA_pgHYYT8L_.woff2) format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  margin-bottom: 2rem;
+  color: white;
 }
 
 .heading-primary--main {
@@ -198,16 +196,16 @@ body {
 }
 
 .heading-secondary {
+  display: inline-block;
   font-size: 1.3rem;
   text-transform: uppercase;
   font-weight: 900;
-  display: inline-block;
   letter-spacing: 0.2rem;
-  cursor: pointer;
   background-image: linear-gradient(to right, #5d5c61, rgba(0, 0, 0, 0.884));
   color: transparent;
-  -webkit-background-clip: text;
+  cursor: pointer;
   transition: all 0.2s;
+  -webkit-background-clip: text;
 }
 
 .heading-secondary:hover {
@@ -231,13 +229,13 @@ body {
 }
 
 .header {
-  display: flex;
   position: relative;
   height: 100vh;
+  z-index: 10;
+  display: flex;
   background-image: url("/assets/img/background1.jpg");
   background-size: cover;
   background-position: top;
-  z-index: 10;
 }
 
 .header__text-box {
@@ -264,10 +262,10 @@ body {
 .footer {
   display: flex;
   justify-content: space-between;
-  height: 10rem;
-  font-size: 1rem;
   overflow: hidden;
+  height: 10rem;
   padding: 0 5rem;
+  font-size: 1rem;
   color: white;
   background-color: rgba(0, 0, 0, 0.884);
 }
@@ -366,10 +364,10 @@ body {
 }
 
 .footer__link:link, .footer__link:visited {
-  color: white;
+  display: inline-block;
   text-transform: uppercase;
   text-decoration: none;
-  display: inline-block;
+  color: white;
   transition: all 0.2s;
 }
 
@@ -377,14 +375,14 @@ body {
   opacity: 0.8;
 }
 
-.section-about {
+.section-intro {
   padding: 3rem 1rem 5rem 1rem;
 }
 
 .section-social {
+  padding: 2rem 1rem 9.5rem 1rem;
   background-image: url("/assets/img/background2.jpg");
   background-size: cover;
-  padding: 2rem 1rem 9.5rem 1rem;
 }
 
 .section-feature {
@@ -392,8 +390,8 @@ body {
 }
 
 .section-content {
-  background-color: #f7f7f7;
   padding: 3rem 2rem 1rem 2rem;
+  background-color: #f7f7f7;
   /* 
   Device = Most of the Smartphones Mobiles (Portrait)
   Screen = B/w 320px to 479px
@@ -573,20 +571,19 @@ body {
 
 .btn {
   display: inline-block;
-  text-decoration: none;
-  background-color: transparent;
-  border: none;
-  outline: none;
-  color: rgba(0, 0, 0, 0.884);
   padding: 0.6rem 2.5rem;
-  border-radius: 50px;
-  cursor: pointer;
-  min-width: 100px;
-  transition: all 0.2s ease;
-  user-select: none;
-  text-align: center;
-  box-shadow: 0 5px 3px rgba(0, 0, 0, 0.2);
   margin-bottom: 0.5rem;
+  border: none;
+  box-shadow: 0 5px 3px rgba(0, 0, 0, 0.2);
+  text-decoration: none;
+  text-align: center;
+  background-color: transparent;
+  color: rgba(0, 0, 0, 0.884);
+  border-radius: 50px;
+  user-select: none;
+  cursor: pointer;
+  outline: none;
+  transition: all 0.2s ease;
 }
 
 .btn--size-l {
@@ -629,6 +626,70 @@ body {
 .content-ctn {
   display: flex;
   justify-content: space-around;
+}
+
+.content-left {
+  flex-basis: 55%;
+  /* 
+  Device = Most of the Smartphones Mobiles (Portrait)
+  Screen = B/w 320px to 479px
+*/
+  /* 
+  Device = Low Resolution Tablets, Mobiles (Landscape)
+  Screen = B/w 481px to 767px
+*/
+  /* 
+  Device = Tablets, Ipads (landscape)
+  Screen = B/w 768px to 1024px
+*/
+  /* 
+  Device = Tablets, Ipads (portrait)
+  Screen = B/w 768px to 1024px
+*/
+  /* 
+  Device = Laptops, Desktops
+  Screen = B/w 1025px to 1280px
+*/
+  /* 
+  Device = Desktops
+  Screen = 1281px to higher resolution desktops
+*/
+  /* 
+  Device = Most of the Smartphones Mobiles (Portrait)
+  Screen = B/w 320px to 479px
+*/
+  /* 
+  Device = Low Resolution Tablets, Mobiles (Landscape)
+  Screen = B/w 481px to 767px
+*/
+  /* 
+  Device = Tablets, Ipads (landscape)
+  Screen = B/w 768px to 1024px
+*/
+  /* 
+  Device = Tablets, Ipads (portrait)
+  Screen = B/w 768px to 1024px
+*/
+  /* 
+  Device = Laptops, Desktops
+  Screen = B/w 1025px to 1280px
+*/
+  /* 
+  Device = Desktops
+  Screen = 1281px to higher resolution desktops
+*/
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
+  .content-left {
+    flex-basis: 90%;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .content-left {
+    flex-basis: 90%;
+  }
 }
 
 .content-right {
@@ -699,10 +760,10 @@ body {
 }
 
 .content-right__photo {
-  width: 60%;
-  box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.5);
   position: absolute;
   z-index: 10;
+  width: 60%;
+  box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.5);
   outline-offset: 0.5rem;
   transition: all 0.3s;
 }
@@ -723,72 +784,8 @@ body {
 }
 
 .content-right__photo:hover {
-  transform: scale(1.3);
+  transform: scale(1.2);
   z-index: 20;
-}
-
-.content-left {
-  flex-basis: 55%;
-  /* 
-  Device = Most of the Smartphones Mobiles (Portrait)
-  Screen = B/w 320px to 479px
-*/
-  /* 
-  Device = Low Resolution Tablets, Mobiles (Landscape)
-  Screen = B/w 481px to 767px
-*/
-  /* 
-  Device = Tablets, Ipads (landscape)
-  Screen = B/w 768px to 1024px
-*/
-  /* 
-  Device = Tablets, Ipads (portrait)
-  Screen = B/w 768px to 1024px
-*/
-  /* 
-  Device = Laptops, Desktops
-  Screen = B/w 1025px to 1280px
-*/
-  /* 
-  Device = Desktops
-  Screen = 1281px to higher resolution desktops
-*/
-  /* 
-  Device = Most of the Smartphones Mobiles (Portrait)
-  Screen = B/w 320px to 479px
-*/
-  /* 
-  Device = Low Resolution Tablets, Mobiles (Landscape)
-  Screen = B/w 481px to 767px
-*/
-  /* 
-  Device = Tablets, Ipads (landscape)
-  Screen = B/w 768px to 1024px
-*/
-  /* 
-  Device = Tablets, Ipads (portrait)
-  Screen = B/w 768px to 1024px
-*/
-  /* 
-  Device = Laptops, Desktops
-  Screen = B/w 1025px to 1280px
-*/
-  /* 
-  Device = Desktops
-  Screen = 1281px to higher resolution desktops
-*/
-}
-
-@media (min-width: 481px) and (max-width: 767px) {
-  .content-left {
-    flex-basis: 90%;
-  }
-}
-
-@media (min-width: 320px) and (max-width: 480px) {
-  .content-left {
-    flex-basis: 90%;
-  }
 }
 
 .social-ctn {
@@ -858,94 +855,94 @@ body {
   }
 }
 
-.social-box {
-  font-size: 1rem;
+.social-item {
   flex-basis: 22%;
   padding: 1.7rem;
-  /* 
-  Device = Most of the Smartphones Mobiles (Portrait)
-  Screen = B/w 320px to 479px
-*/
-  /* 
-  Device = Low Resolution Tablets, Mobiles (Landscape)
-  Screen = B/w 481px to 767px
-*/
-  /* 
-  Device = Tablets, Ipads (landscape)
-  Screen = B/w 768px to 1024px
-*/
-  /* 
-  Device = Tablets, Ipads (portrait)
-  Screen = B/w 768px to 1024px
-*/
-  /* 
-  Device = Laptops, Desktops
-  Screen = B/w 1025px to 1280px
-*/
-  /* 
-  Device = Desktops
-  Screen = 1281px to higher resolution desktops
-*/
-  /* 
-  Device = Most of the Smartphones Mobiles (Portrait)
-  Screen = B/w 320px to 479px
-*/
-  /* 
-  Device = Low Resolution Tablets, Mobiles (Landscape)
-  Screen = B/w 481px to 767px
-*/
-  /* 
-  Device = Tablets, Ipads (landscape)
-  Screen = B/w 768px to 1024px
-*/
-  /* 
-  Device = Tablets, Ipads (portrait)
-  Screen = B/w 768px to 1024px
-*/
-  /* 
-  Device = Laptops, Desktops
-  Screen = B/w 1025px to 1280px
-*/
-  /* 
-  Device = Desktops
-  Screen = 1281px to higher resolution desktops
-*/
-  text-align: justify;
   border-radius: 5rem;
+  font-size: 1rem;
+  text-align: justify;
   transition: all 0.2s;
   background-color: rgba(255, 255, 255, 0.8);
+  /* 
+  Device = Most of the Smartphones Mobiles (Portrait)
+  Screen = B/w 320px to 479px
+*/
+  /* 
+  Device = Low Resolution Tablets, Mobiles (Landscape)
+  Screen = B/w 481px to 767px
+*/
+  /* 
+  Device = Tablets, Ipads (landscape)
+  Screen = B/w 768px to 1024px
+*/
+  /* 
+  Device = Tablets, Ipads (portrait)
+  Screen = B/w 768px to 1024px
+*/
+  /* 
+  Device = Laptops, Desktops
+  Screen = B/w 1025px to 1280px
+*/
+  /* 
+  Device = Desktops
+  Screen = 1281px to higher resolution desktops
+*/
+  /* 
+  Device = Most of the Smartphones Mobiles (Portrait)
+  Screen = B/w 320px to 479px
+*/
+  /* 
+  Device = Low Resolution Tablets, Mobiles (Landscape)
+  Screen = B/w 481px to 767px
+*/
+  /* 
+  Device = Tablets, Ipads (landscape)
+  Screen = B/w 768px to 1024px
+*/
+  /* 
+  Device = Tablets, Ipads (portrait)
+  Screen = B/w 768px to 1024px
+*/
+  /* 
+  Device = Laptops, Desktops
+  Screen = B/w 1025px to 1280px
+*/
+  /* 
+  Device = Desktops
+  Screen = 1281px to higher resolution desktops
+*/
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
-  .social-box {
+  .social-item {
     padding: 1rem 1rem 2rem 1rem;
     margin-top: 1rem;
   }
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
-  .social-box {
+  .social-item {
     padding: 1rem 1rem 2rem 1rem;
     margin-top: 1rem;
   }
 }
 
-.social-box__icon {
-  font-size: 4rem;
+.social-item__icon {
   display: inline-block;
+  font-size: 4rem;
   background-color: rgba(0, 0, 0, 0.884);
   -webkit-background-clip: text;
   color: transparent;
 }
 
-.social-box:hover {
-  cursor: pointer;
-  transform: translateY(-1rem) scale(1.1);
-}
-
-.social-box--heading {
+.social-item--heading {
   text-align: center;
   margin-bottom: 1rem;
+}
+
+.social-item:hover {
+  cursor: pointer;
+  transform: translateY(-0.5rem) scale(1.1);
 }
 
 .feature-ctn {
@@ -1023,12 +1020,12 @@ body {
   position: absolute;
   height: 27rem;
   width: 100%;
-  border-radius: 5rem;
-  transition: all 0.8s ease;
   overflow: hidden;
-  backface-visibility: hidden;
+  border-radius: 5rem;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   color: white;
+  backface-visibility: hidden;
+  transition: all 0.8s ease;
   /* 
   Device = Most of the Smartphones Mobiles (Portrait)
   Screen = B/w 320px to 479px
@@ -1251,14 +1248,14 @@ body {
 }
 
 .feature__heading {
+  position: absolute;
+  top: 7rem;
+  right: 2rem;
   font-size: 1.5rem;
   font-weight: 350;
   text-align: right;
   text-transform: uppercase;
   color: white;
-  position: absolute;
-  top: 7rem;
-  right: 2rem;
   width: 75%;
   /* 
   Device = Most of the Smartphones Mobiles (Portrait)
@@ -1325,8 +1322,8 @@ body {
 }
 
 .feature__heading-span {
-  border-radius: 5rem;
   padding: 0.3rem 1.3rem;
+  border-radius: 5rem;
   -webkit-box-decoration-break: clone;
 }
 
@@ -1424,19 +1421,19 @@ body {
 }
 
 .feature__cta {
-  margin-top: 3rem;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+  margin-top: 3rem;
   width: 90%;
+  text-align: center;
+  transform: translate(-50%, -50%);
 }
 
 .feature__price-box {
+  margin-bottom: 8rem;
   text-align: center;
   color: white;
-  margin-bottom: 8rem;
 }
 
 .feature__price-only {
@@ -1445,9 +1442,9 @@ body {
 }
 
 .feature__price-value {
+  margin-bottom: 5rem;
   font-size: 3rem;
   font-weight: 100;
-  margin-bottom: 5rem;
 }
 
 .feature:hover .feature__side--front {
@@ -1518,40 +1515,34 @@ body {
   transform: rotateY(0);
 }
 
-.nav {
-  display: flex;
+.navbar-ctn {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 99;
+  display: flex;
   min-height: 20px;
   width: 100%;
-  z-index: 99;
   justify-content: space-between;
   background-color: rgba(0, 0, 0, 0.884);
 }
 
-.nav-list {
+.navbar-menu {
   margin: 0 1.5rem;
 }
 
-.nav-list li {
-  position: relative;
-}
-
-.nav-list > li {
+.navbar-menu > li {
   display: inline-block;
+  position: relative;
+  cursor: pointer;
 }
 
-.nav-list > li > a {
-  color: #f7f7f7;
-}
-
-.nav-list li a {
-  color: white;
-  text-decoration: none;
-  line-height: 38px;
-  padding: 0 0.5rem;
+.navbar-menu li a {
   display: block;
+  line-height: 40px;
+  padding: 0 0.5rem;
+  text-decoration: none;
+  color: #f7f7f7;
   /* 
   Device = Most of the Smartphones Mobiles (Portrait)
   Screen = B/w 320px to 479px
@@ -1603,40 +1594,40 @@ body {
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
-  .nav-list li a {
+  .navbar-menu li a {
     padding: 0 0.5rem;
     line-height: 26px;
   }
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
-  .nav-list li a {
+  .navbar-menu li a {
     padding: 0 0.2rem;
     line-height: 26px;
   }
 }
 
-.nav-list li:hover a {
+.navbar-menu li:hover a {
   color: rgba(0, 0, 0, 0.884);
   background-color: white;
 }
 
-.nav-list .subnav {
+.navbar-menu .subnav {
   position: absolute;
   top: 100%;
   left: 0;
-  background-color: white;
-  list-style: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   display: none;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  list-style: none;
+  background-color: white;
 }
 
-.nav-list li:hover .subnav {
+.navbar-menu li:hover .subnav {
   display: block;
 }
 
-.nav-list > li:hover > a,
-.nav-list .subnav li:hover a {
+.navbar-menu > li:hover > a,
+.navbar-menu .subnav li:hover a {
   color: rgba(0, 0, 0, 0.884);
   background-color: #f7f7f7;
 }
@@ -1651,13 +1642,13 @@ body {
 .toast {
   display: flex;
   align-items: center;
-  background-color: white;
   border-radius: 2px;
+  border-left: 4px solid;
+  box-shadow: 0 5px 8px rgba(93, 92, 97, 0.3);
   padding: 1rem 0;
   min-width: 17rem;
   max-width: 32rem;
-  border-left: 4px solid;
-  box-shadow: 0 5px 8px rgba(93, 92, 97, 0.3);
+  background-color: white;
   transition: all linear 0.3s;
 }
 
@@ -1897,10 +1888,10 @@ body {
 .form {
   padding: 2rem;
   text-align: center;
-  background: white;
-  border-radius: 2px;
   align-self: center;
   box-shadow: 0 2px 10px 0 rgba(51, 62, 73, 0.1);
+  background: white;
+  border-radius: 2px;
 }
 
 .form .heading {
@@ -1908,19 +1899,19 @@ body {
 }
 
 .form .desc {
+  margin-top: 1.6rem;
   text-align: center;
-  color: #787878;
   font-size: 1rem;
   font-weight: lighter;
   line-height: 2.4rem;
-  margin-top: 1.6rem;
   font-weight: 300;
+  color: #787878;
 }
 
 .form-group {
   display: flex;
-  margin-bottom: 5px;
   flex-direction: column;
+  margin-bottom: 5px;
 }
 
 .form-label,
@@ -1929,8 +1920,8 @@ body {
 }
 
 .form-label {
-  font-weight: 700;
   padding-bottom: 6px;
+  font-weight: 700;
   line-height: 1.8rem;
   font-size: 1.2rem;
 }
@@ -1938,10 +1929,10 @@ body {
 .form-control {
   height: 30px;
   padding: 0.5rem;
-  border: 1px solid #5d5c61;
-  border-radius: 3px;
   outline: none;
   font-size: 1rem;
+  border: 1px solid #5d5c61;
+  border-radius: 3px;
 }
 
 .form-control:hover {
@@ -1957,22 +1948,22 @@ body {
 }
 
 .form-message {
+  padding: 0.4rem 0 0;
   font-size: 1rem;
   line-height: 1.6rem;
-  padding: 0.4rem 0 0;
 }
 
 .form-submit {
-  outline: none;
-  background-color: #5d5c61;
   margin-top: 1rem;
   padding: 1rem 1.3rem;
-  font-weight: 600;
-  color: #f7f7f7;
-  border: none;
   width: 100%;
-  font-size: 1rem;
   border-radius: 8px;
+  outline: none;
+  border: none;
+  font-weight: 600;
+  font-size: 1rem;
+  color: #f7f7f7;
+  background-color: #5d5c61;
   cursor: pointer;
 }
 
@@ -2198,17 +2189,15 @@ body {
 }
 
 .contact-control {
-  height: unset;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  padding-left: 1rem;
+  display: flex;
   border-radius: 0.6rem;
   border: 0.2rem solid #787878;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  width: 100%;
+  height: unset;
   font-weight: 500;
   font-size: 1rem;
-  display: flex;
-  width: 100%;
-  margin-bottom: 1rem;
 }
 
 .contact-control::placeholder {
